versioned_docs/version-2023.2.1/professor/mauro_cesar_de_souza_siena.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Mauro César de Souza Siena",
  base: "",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: []
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Matemática I",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Sala 3-1",
          students: [
            "COM2023"
          ],
          time: "13:10 - 14:00"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Estatística aplicada",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Sala 2-2",
          students: [
            "TGC2023"
          ],
          time: "19:00 - 19:50"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Introdução à Educação à distância",
          size: 1,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "",
          students: [
            "EGE2023"
          ],
          time: "21:00 - 21:50"
        },
        {
          subject: "Matemática I",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Sala 3-1",
          students: [
            "COM2023"
          ],
          time: "09:25 - 10:15"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Mauro César de Souza Siena

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
